# chatui-agent-assistant

./: .gitignore  QUICK_START.md  README.md  TROUBLESHOOTING.md  check_status.py  pyproject.toml  requirements.txt  setup_api_key.sh  start_server.bat  start_server.sh  test_api.py  test_setup.py
frontend/: index.html
src/: api_server.py  config.py  lemonhall_memory.db  teams_consoles.py  volcengine_provider.py
src/agents/: ai_terms_agent.py  dev_tools_agent.py  knowledge_agent.py  personal_info_agent.py  project_agent.py  reasoning_agent.py  server_agent.py  tech_env_agent.py
