[project]
name = "chatui-agent-assistant"
version = "0.1.0"
description = "柠檬叔个人助手 - 基于agno框架的个性化AI助手"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "httpx",
    "python-multipart",
    "aiofiles",
    "sqlalchemy",
    "yfinance",
    "beautifulsoup4",
    "pandas",
    "numpy",
    "requests",
    "peewee",
    "multitasking",
    "frozendict",
    "curl-cffi",
    "soupsieve",
    "pytz",
    "python-dateutil",
    "protobuf",
    "cffi",
    "pycparser",
    "tzdata",
    "platformdirs",
    "six",
    "lancedb",
    "huggingface-hub"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
